Minor optimization: change new Number to Number.valueOf idiom to reduce unnecessary immutable object creation.